@@ -16,7 +16,9 @@ HISTORY
       Spanish(ES), Czech
 
     - Developers: winx_strdup, winx_vsprintf, winx_enable_dbg_log,
-      winx_disable_dbg_log functions added to zenwinx library
+      winx_disable_dbg_log, winx_path_remove_extension,
+      winx_path_remove_filename, winx_path_extract_filename
+      functions added to zenwinx library
 
     beta1:
     - defragmentation algorithm reimplemented; partial defragmentation improved
